# StoryTellerChat

./: .ghci  .gitignore  Readme.md  StoryTellerChat.cabal  stack.yaml
app/: Main.hs
src/: STC.hs
src/STC/: StoryFlow.hs  StoryParser.hs
test/: Spec.hs
