name:                StoryTellerChat
version:             0.1.0.0
synopsis:            Story teller from chat
description:         Please see README.md
homepage:            http://github.com/elediaz/storytellerchat
license:             BSD3
license-file:        LICENSE
author:              Eleazar Díaz Delgado
maintainer:          eleazardzdo at google
copyright:           2016 Eleazar Díaz Delgado
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     STC
                     , STC.StoryFlow
                     , STC.StoryParser
  build-depends:       base >= 4.7 && < 5
                     , text == 1.2.*
                     , telegram-api
                     , free == 4.12.*
                     , monad-logger == 0.3.17
                     , lens == 4.13
                     , stm == 2.4.4.*
                     , mtl == 2.2.1
                     , containers == 0.5.6.*
                     , attoparsec == 0.13.0.*
  default-language:    Haskell2010

executable storytellerchat
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , StoryTellerChat
                     , text == 1.2.*
  default-language:    Haskell2010

test-suite storytellerchat-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , StoryTellerChat
                     , hspec == 2.2.*
                     , attoparsec == 0.13.0.*
                     , text == 1.2.*
                     , raw-strings-qq == 1.*
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: http://github.com/elediaz/storytellerchat
